# sat_solver

./: CMakeLists.txt  README.md
src/: .sat_solver.cpp.swp  example.cnf  main.cpp  parser.cpp  parser.h  sat_solver  sat_solver.cpp  solver  solver.cpp  solver.h  utils.cpp  utils.h
tests/: CMakeLists.txt  test_solver.cpp
